--- a/index.html
+++ b/index.html
@@ -8,12 +8,40 @@
     
 </head>
 <body>
-    <center>
-        <img src="assets/images/logox.png">
+<center>
 
+        <img src="assets/images/logox.png">
         <div class="content-container">
             <h1>The Best 1-Stop-Shop For Final Cut Pro X Plugins!</h1>
-        <div>
-    <center>
+            <a href="how-to-download.html">
+                <button>
+                    <img src="assets/images/gifs/download.gif" alt="Icon">
+                    <h1>How to Use Our Plugins!</h1>
+                </button>
+            </a>
+            <hr>
+
+
+
+
+
+
+            
+
+            <table>
+                <tr>
+                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
+                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
+                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
+                </tr>
+                <tr>
+                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
+                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
+                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
+                </tr>
+            </table>
+        </div>
+
+</center>
 </body>
 </html>
