--- a/404.html
+++ b/404.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <center>
-    <img src="assets/images/404.png">
+        <div class="no-bdr">
+            <a href="index.html">
+                <button>
+                    <img src="assets/images/404.png" alt="Icon">
+                </button>
+            </a>
+        </div>
 
     <div class="content-container">
         <a href="index.html">
