--- a/how-to-download.html
+++ b/how-to-download.html
@@ -9,11 +9,35 @@
 </head>
 <body>
     <center>
-        <img src="assets/images/logox.png">
+        <div class="no-bdr">
+            <a href="index.html">
+                <button>
+                    <img src="assets/images/logox.png">
+                </button>
+            </a>
+        </div>
 
         <div class="content-container">
-            <h1>Title Here</h1>
+            <table>
+                <tr>
+                    <td><img src="assets/images/gifs/disco.gif">
+                    <td><h1>How To Use Out Plugins!</h1>
+                    <td><img src="assets/images/gifs/disco.gif">
+                </tr>
+            </table>
         <div>
+        <hr><hr>
+        <h1>Click The Download Button To Access The FREE How-To-Use PDF!</h1>
+        <table>
+            <tr>
+                    <td><img src="assets/images/gifs/disco.gif">
+                    <td><a href="assets/downloads/how-to-install-plugins.pdf">
+                        <button><img src="assets/images/download.png" alt="Icon"></button>
+                        </a>
+                    <td><img src="assets/images/gifs/disco.gif">
+            <tr>
+        </table>
+        <hr><hr>
     <center>
 </body>
 </html>
