--- a/index.html
+++ b/index.html
@@ -10,16 +10,27 @@
 <body>
 <center>
 
-        <img src="assets/images/logox.png">
+    <div class="no-bdr">
+        <a href="index.html">
+            <button>
+                <img src="assets/images/logox.png" alt="Icon">
+            </button>
+        </a>
+    </div>
+
+
         <div class="content-container">
-            <h1>The Best 1-Stop-Shop For Final Cut Pro X Plugins!</h1>
-            <a href="how-to-download.html">
-                <button>
-                    <img src="assets/images/gifs/download.gif" alt="Icon">
-                    <h1>How to Use Our Plugins!</h1>
-                </button>
-            </a>
-            <hr>
+                <h1>The Best 1-Stop-Shop For Final Cut Pro X Plugins!</h1>
+                    <hr>
+                    <hr>
+                        <a href="how-to-download.html">
+                            <button>
+                                <img src="assets/images/gifs/download.gif" alt="Icon">
+                                    <h1>How to Use Our Plugins!</h1>
+                            </button>
+                        </a>
+                            <hr>
+                            <hr>
 
 
 
@@ -34,14 +45,17 @@
                     <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
                     <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
                 </tr>
-                <tr>
-                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
-                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
-                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
-                </tr>
             </table>
-        </div>
 
 </center>
+
+<footer>
+    <center>
+        <h2>FCPX Stop 47</h2>
+        <h3>© 2024 FCPX Stop 47</h3>
+        <h3>Created by Tyler C. Caselli</h3>
+    </center>
+</footer>
+
 </body>
 </html>
