Test .ZIP download

--- a/how-to-download.html
+++ b/how-to-download.html
@@ -31,7 +31,7 @@
         <table>
             <tr>
                     <td><img src="assets/images/gifs/disco.gif">
-                    <td><a href="assets/downloads/how-to-install-plugins.pdf">
+                    <td><a href="assets/downloads/how-to-install-plugins.zip">
                         <button><img src="assets/images/download.png" alt="Icon"></button>
                         </a>
                     <td><img src="assets/images/gifs/disco.gif">
