Add footer to all HTML files

--- a/how-to-download.html
+++ b/how-to-download.html
@@ -39,5 +39,13 @@
         </table>
         <hr><hr>
     <center>
+
+        <footer>
+            <center>
+                <h2>FCPX Stop 47</h2>
+                <h3>© 2024 FCPX Stop 47</h3>
+                <h3>Created by Tyler C. Caselli</h3>
+            </center>
+        </footer>
 </body>
 </html>
