--- a/template.html
+++ b/template.html
@@ -15,5 +15,15 @@
             <h1>Title Here</h1>
         <div>
     <center>
+
+        
+
+<footer>
+    <center>
+        <h2>FCPX Stop 47</h2>
+        <h3>© 2024 FCPX Stop 47</h3>
+        <h3>Created by Tyler C. Caselli</h3>
+    </center>
+</footer>
 </body>
 </html>
