--- a/404.html
+++ b/404.html
@@ -25,5 +25,13 @@
         </a>
     </div>
     </center>
+
+    <footer>
+        <center>
+            <h2>FCPX Stop 47</h2>
+            <h3>© 2024 FCPX Stop 47</h3>
+            <h3>Created by Tyler C. Caselli</h3>
+        </center>
+    </footer>
 </body>
 </html>
