Remove unnecessary div tags and center alignment

--- a/how-to-download.html
+++ b/how-to-download.html
@@ -26,7 +26,6 @@
                     <td><img src="assets/images/gifs/disco.gif">
                 </tr>
             </table>
-        <div>
         <hr><hr>
         <h1>Click The Download Button To Access The FREE How-To-Use PDF!</h1>
         <table>
@@ -39,7 +38,8 @@
             <tr>
         </table>
         <hr><hr>
-    <center>
+    </center>
+    </div>
 
         <footer>
             <center>
