Add background music to HTML pages

--- a/404.html
+++ b/404.html
@@ -8,6 +8,12 @@
     <title>FCPX Stop 47 (Page Not Found!)</title>
 </head>
 <body>
+
+    <audio loop autoplay>
+        <source src="assets/music/background.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
     <center>
         <div class="no-bdr">
             <a href="index.html">
