--- a/how-to-download.html
+++ b/how-to-download.html
@@ -9,6 +9,12 @@
     
 </head>
 <body>
+
+    <audio loop autoplay>
+        <source src="assets/music/background.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
     <center>
         <div class="no-bdr">
             <a href="index.html">
