Update Time Test

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
         <div class="content-container">
-                <h1>The Best 1-Stop-Shop For Final Cut Pro X Plugins!</h1>
+                <h1>The Best 1-Stop-Shop For Final Cut Pro X Plugins</h1>
                     <hr>
                     <hr>
                         <a href="how-to-download.html">
