--- a/how-to-download.html
+++ b/how-to-download.html
@@ -28,7 +28,7 @@
             <table>
                 <tr>
                     <td><img src="assets/images/gifs/disco.gif">
-                    <td><h1>How To Use Out Plugins!</h1>
+                    <td><h1>How To Use Our Plugins!</h1>
                     <td><img src="assets/images/gifs/disco.gif">
                 </tr>
             </table>
