--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         </a>
     </div>
 
-
         <div class="content-container">
                 <h1>The Best 1-Stop-Shop For Final Cut Pro X Plugins!</h1>
                     <hr>
@@ -39,24 +38,22 @@
                             <hr>
                             <hr>
 
-
-
-
-
-
-            
-
             <table>
                 <tr>
-                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
-                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
-                    <td><button style="background-image: url('bg.png');"><a href="https://tyguy47.com" target="_self"><img src="bimg.png" alt="Icon"></a></button></td>
+                    <td>
+                        <a href="10-pack-of-luts.html">
+                            <button>
+                                <img src="(icon path here!)" alt="Icon">
+                                    <p>10 Pack of LUTs</p>
+                            </button>
+                        </a>
+                    </td>
+                    
                 </tr>
             </table>
             <hr><hr>
 
 </center>
-
 <footer>
     <center>
         <h2>FCPX Stop 47</h2>
