Setup Payment Page

--- a/10-pack-of-luts.html
+++ b/10-pack-of-luts.html
@@ -25,7 +25,17 @@
 
         <div class="content-container">
             <h1>10 Pack Of LUTs</h1>
+            <hr><hr>
+            <a href="https://buy.stripe.com/test_fZe02U4u6ag46qIbII">
+                <button>
+                    <img src="assets/images/products/10-pack-of-luts-icon.png" alt="icon" width="300" height="300">
+                </button>
+            </a>
             
+            <hr><hr>
+
+
+
         </div>
     </center>
 <footer>
