--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
                     <td>
                         <a href="10-pack-of-luts.html">
                             <button>
-                                <img src="(icon path here!)" alt="Icon">
+                                <img src="assets/images/products/10-pack-of-luts-icon.png" alt="icon" width="300" height="300">
                                     <p>10 Pack of LUTs</p>
                             </button>
                         </a>
                     </td>
                     
+                    
+
                 </tr>
             </table>
             <hr><hr>
