Update LUTs page with new images and styling

--- a/10-pack-of-luts.html
+++ b/10-pack-of-luts.html
@@ -24,14 +24,43 @@
         </div>
 
         <div class="content-container">
-            <h1>10 Pack Of LUTs</h1>
+            <h1>10 Pack Of LUT</h1>
             <hr><hr>
+
+            <table>
+                <tr>
+                    <td>
+                        <figure>
+                            <img src="assets/images/products/before-lut.JPG" alt="10 Pack Of LUTs" width="300" height="300">
+                            <figcaption>Before LUT</figcaption>
+                        </figure>
+                    </td>
+
+                    <td>
+                        <h2>This 10 Pack Of Luts Contains:</h2>
+                        <ul>
+                            <li>10 Different <i>Stop47</i> Custom Made LUTs</li>
+                        </ul>
+                    </td>
+
+                    <td>
+                        <figure>
+                            <img src="assets/images/products/10-pack-of-luts-icon.png" alt="icon" width="300" height="300">
+                            <figcaption>After LUT</figcaption>
+                        </figure>
+                    </td>
+                </tr>
+            </table>
+
+            <hr><hr>
+       
             <a href="https://buy.stripe.com/test_fZe02U4u6ag46qIbII">
-                <button>
-                    <img src="assets/images/products/10-pack-of-luts-icon.png" alt="icon" width="300" height="300">
-                </button>
+                <div class="buy-button">
+                    <button>
+                        <img src="assets/images/gifs/buy-button.gif" alt="Buy"> 
+                    </button> 
+                </div>
             </a>
-            
             <hr><hr>
 
 
