Set up the license page

--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
 
         <div class="content-container">
                 <h1>The Best 1-Stop-Shop For Final Cut Pro X Plugins!</h1>
-                    <hr>
-                    <hr>
+                    <hr><hr>
                         <a href="how-to-download.html">
                             <button>
                                 <img src="assets/images/gifs/download.gif" alt="Icon">
                                     <h1>How to Use Our Plugins!</h1>
                             </button>
                         </a>
-                            <hr>
-                            <hr>
+                    <hr><hr>
 
             <table>
                 <tr>
@@ -54,7 +52,10 @@
                 </tr>
             </table>
             <hr><hr>
-
+                <a href="license.html">
+                    <h3>You can view our products <i>LICENSE</i> here!</h3>
+                </a>
+            <hr><hr>
 </center>
 <footer>
     <center>
