Add LUT Plugin and 3D Text Spin Plugin

--- a/10-pack-of-luts.html
+++ b/10-pack-of-luts.html
@@ -25,6 +25,7 @@
 
         <div class="content-container">
             <h1>10 Pack Of LUT</h1>
+            <h1>(LUT Plugin)</h1>
             <hr><hr>
 
             <table>
