--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
 
             <table>
                 <tr>
+
+                    <td>
+                        <a href="3d-text-spin.html">
+                            <button>
+                                <img src="Plugins/3D-text-spin/straight.png" alt="icon" width="300" height="300">
+                                    <p>3D Text Spin Plugin</p>
+                            </button>
+                        </a>
+                    </td>
+
                     <td>
                         <a href="10-pack-of-luts.html">
                             <button>
@@ -46,8 +56,6 @@
                             </button>
                         </a>
                     </td>
-                    
-                    
 
                 </tr>
             </table>
