Add spinning text effect plugin and buy button

--- a/3d-text-spin.html
+++ b/3d-text-spin.html
@@ -29,12 +29,42 @@
             <h1>(Text Effect Plugin)</h1>
             <hr><hr>
 
-    </center>
+            <table>
+                <tr>
+                    <td>
+                        <figure>
+                            <img src="Plugins/3D-text-spin/straight.png" alt="10 Pack Of LUTs" width="300" height="300">
+                            <figcaption></figcaption>
+                        </figure>
+                    </td>
 
+                    <td>
+                        <h2>This Plugin Contains:</h2>
+                        <ul>
+                            <li>A cool <i>STOP 47 MADE</i> spinning text effect plugin!</li>
+                        </ul>
+                    </td>
 
-    
-        
+                    <td>
+                        <figure>
+                            <img src="Plugins/3D-text-spin/turned.png" alt="icon" width="300" height="300">
+                            <figcaption></figcaption>
+                        </figure>
+                    </td>
+                </tr>
+            </table>
 
+            <hr><hr>
+
+            <a href="https://buy.stripe.com/test_bIY16Y7Gi5ZOaGY5kl">
+                <div class="buy-button">
+                    <button>
+                        <img src="assets/images/gifs/buy-button.gif" alt="Buy"> 
+                    </button> 
+                </div>
+            </a>
+            <hr><hr>
+</center>
 <footer>
     <center>
         <h2>FCPX Stop 47</h2>
