Update download links for plugins

--- a/10-pack-of-luts.html
+++ b/10-pack-of-luts.html
@@ -55,10 +55,10 @@
 
             <hr><hr>
        
-            <a href="https://buy.stripe.com/test_fZe02U4u6ag46qIbII">
+            <a href="Plugins/10-pack-of-luts/10-pack-of-luts.zip">
                 <div class="buy-button">
                     <button>
-                        <img src="assets/images/gifs/buy-button.gif" alt="Buy"> 
+                        <img src="assets/images/gifs/download-text.gif" alt="Download"> 
                     </button> 
                 </div>
             </a>
