--- a/3d-text-spin.html
+++ b/3d-text-spin.html
@@ -56,10 +56,10 @@
 
             <hr><hr>
 
-            <a href="https://buy.stripe.com/test_bIY16Y7Gi5ZOaGY5kl">
+            <a href="Plugins/3D-text-spin/3D Text Spin.zip">
                 <div class="buy-button">
                     <button>
-                        <img src="assets/images/gifs/buy-button.gif" alt="Buy"> 
+                        <img src="assets/images/gifs/download-text.gif" alt="Download"> 
                     </button> 
                 </div>
             </a>
