Looking into buy button options!

--- a/10-pack-of-luts.html
+++ b/10-pack-of-luts.html
@@ -58,10 +58,13 @@
             <a href="Plugins/10-pack-of-luts/10-pack-of-luts.zip">
                 <div class="buy-button">
                     <button>
-                        <img src="assets/images/gifs/download-text.gif" alt="Download"> 
+                        <img src="assets/images/gifs/download-text.gif" alt="Download">
                     </button> 
                 </div>
             </a>
+
+        <!---    <div class="ecsp ecsp-SingleProduct-v2 ecsp-Product ec-Product-623842468" itemtype="http://schema.org/Product" data-single-product-id="623842468"><div class="ecsp-title" itemprop="name" style="display:none;" content="3D Text Spin Effect"></div><div customprop="addtobag"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?80108774&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script> -->
+
             <hr><hr>
 
 
