Added Link To Earn $15
This link promotes the Hidden WIKI

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                     <h3>You can view our products <i>LICENSE</i> here!</h3>
                 </a>
             <hr><hr>
+            <a href="a-short-story.html">
+                <h3><b>Hey, got time to learn about web safety?</b></h3>
+            </a>
+            <hr><hr>
 </center>
 <footer>
     <center>
